--- a/style/index.css
+++ b/style/index.css
@@ -113,17 +113,13 @@ select {
 }
 .hero_btn {
   display: flex;
-  justify-content: center;
   align-items: center;
-  justify-content: space-evenly;
+  padding: 6px 6px 6px 32px;
+  gap: 16px;
   margin-top: 32px;
-  width: 100%;
-  max-width: 246px;
-  height: 64px;
   color: white;
   font-weight: 600;
   font-size: 20px;
-  letter-spacing: 4%;
   border-radius: 24px;
   background: linear-gradient(to right, #f9b513, #ea601e);
   box-shadow: 0px 20px 30px 0px #9437055d;
@@ -196,22 +192,20 @@ select {
 .fedbek-btn {
   width: 100%;
   max-width: 245px;
-  height: 64px;
-  border-radius: 24px;
-  background-color: white;
-  display: flex;
-  justify-content: center;
-  margin-top: 40px;
-  box-shadow: 0px 20px 20px 0px #94370573;
-}
-.fedbek-btn a {
   display: flex;
   align-items: center;
-  font-weight: 600;
+  justify-content: end;
+  padding: 6px;
   gap: 16px;
+  border-radius: 24px;
+  background-color: white;
+  margin-top: 40px;
+  box-shadow: 0px 20px 20px 0px #94370573;
+  font-weight: 600;
   font-size: 20px;
   color: #f28e46;
 }
+
 .main_texts {
   padding: 0px;
   display: flex;
@@ -558,13 +552,142 @@ select {
   font-size: 40px;
   color: black;
 }
-iframe {
-  width: 100%; /* konteyner to‘liq kenglikni egallaydi */
-  height: 415px; /* balandlik 415px */
-  overflow: hidden; /* ortiqcha qismlarni yashiradi */
-  position: relative;
+.youtube {
+  width: 100%;
+  height: 415px;
+  border-radius: 24px;
+  margin-top: 80px;
 }
-
+.youtube_icon {
+  display: flex;
+  gap: 16px;
+  margin-top: 40px;
+}
+.main_logopitizm_fa {
+  width: 100%;
+  margin-top: 80px;
+  background: #f5a838 url("../img/feedbek_bagc.svg") center center;
+  background-size: contain;
+  display: flex;
+  align-items: center;
+  gap: 24px;
+  border-radius: 24px;
+  padding: 40px;
+}
+.main_logopitizim_text {
+  width: 100%;
+  max-width: 872px;
+  display: flex;
+  gap: 24px;
+}
+.main_logopitizim_text p {
+  font-weight: 500;
+  font-size: 32px;
+  color: white;
+}
+.main_logopitizim_text hr {
+  width: 2px;
+  border: none;
+  color: white;
+  background-color: white;
+}
+.logotipizm {
+  width: 100%;
+  max-width: 38px;
+}
+.main-teachers {
+  display: block;
+}
+.techers_cards {
+  display: flex;
+  gap: 16px;
+  margin-top: 80px;
+}
+.teacher_card img {
+  width: 100%;
+  max-width: 300px;
+  border-radius: 24px;
+}
+.teacher_card p {
+  font-weight: 600;
+  font-size: 18px;
+  color: #020202;
+  padding-top: 16px;
+}
+.mian-techers-mini {
+  display: none;
+}
+.main_title_yoshlar {
+  display: flex;
+  margin-top: 80px;
+  gap: 24px;
+}
+.main_title_yoshlar hr {
+  width: 2px;
+  border: none;
+  background-color: #f28e46;
+}
+.yoshlar {
+  color: #f28e46;
+  font-weight: 600;
+}
+.main_title_yoshlar h1 {
+  width: 100%;
+  max-width: 616px;
+  font-weight: 500;
+  color: #020202;
+  font-size: 40px;
+}
+.main-text-yoshlar p {
+  width: 100%;
+  max-width: 616px;
+  font-weight: 400;
+  font-size: 20px;
+  color: #535862;
+  margin-top: 40px;
+}
+.main_end_texts {
+  width: 100%;
+  margin-top: 80px;
+  background: #f5a838 url("../img/feedbek_bagc.svg") center center;
+  background-size: contain;
+  align-items: center;
+  gap: 24px;
+  border-radius: 24px;
+  padding: 40px;
+  margin-bottom: 80px;
+}
+.end_title {
+  display: flex;
+  gap: 24px;
+}
+.end_title hr {
+  width: 2px;
+  background-color: white;
+  border: none;
+}
+.end_text {
+  width: 100%;
+  max-width: 1000px;
+  font-weight: 600;
+  font-size: 40px;
+  color: white;
+}
+.ariza_end {
+  width: 100%;
+  max-width: 230px;
+  gap: 16px;
+  justify-content: end;
+  padding: 4px 6px 4px 0px;
+  margin-top: 40px;
+  display: flex;
+  align-items: center;
+  color: #020202;
+  font-size: 20px;
+  font-weight: 600;
+  background-color: white;
+  border-radius: 24px;
+}
 /* //////////////////// footer */
 footer {
   padding: 32px 0px;
@@ -654,6 +777,10 @@ footer {
   display: flex;
   gap: 32px;
 }
+.footer_map {
+  display: flex;
+  justify-content: end;
+}
 .main-directions-mini {
   display: none;
 }
@@ -681,8 +808,6 @@ footer {
   }
   .hero_btn {
     font-size: 16px;
-    max-width: 189px;
-    height: 50px;
     border-radius: 18px;
   }
   .hero_btn img {
@@ -711,7 +836,6 @@ footer {
   }
   .feedbek {
     width: 100%;
-    max-width: 398px;
     padding: 16px;
   }
   .feedbek_cards {
@@ -731,6 +855,10 @@ footer {
     font-size: 24px;
     padding: 0px;
   }
+  .feedbek_titles {
+    margin-top: 32px;
+    padding: 0px;
+  }
   .feedbek_titles h1 {
     font-size: 20px;
   }
@@ -747,24 +875,23 @@ footer {
     flex-direction: column;
   }
   .main_ideas_text {
-    margin: 0px;
+    margin-top: 50px;
   }
   .main_ideas_text h1 {
     font-size: 30px;
-    margin-top: 50px;
-    margin-left: -20px;
   }
   .main-ideas {
     padding: 0px 16px;
   }
   .main_text_content {
     border-radius: 24px;
-    margin-top: 32px;
     padding: 20px;
   }
   .main_text_content_title {
     gap: 16px;
-    margin-left: -10px;
+  }
+  .slider {
+    animation: scroll 20s linear infinite;
   }
   .mini_img {
     width: 100%;
@@ -800,10 +927,10 @@ footer {
   .main-directions-mini {
     display: block;
     padding: 0px 16px;
-    /* border: 1px solid black; */
   }
   .text_mini {
     display: flex;
+    align-items: center;
     gap: 16px;
   }
   .text_mini p {
@@ -813,6 +940,7 @@ footer {
   }
   .text_mini hr {
     width: 2px;
+    height: 48px;
     border: none;
     background-color: #f28e46;
   }
@@ -828,7 +956,6 @@ footer {
   }
   hr {
     margin-top: 16px;
-    height: 2px;
     border: none;
     background-color: #f28e46;
   }
@@ -864,6 +991,101 @@ footer {
   .parfolio_btn {
     margin-top: 24px;
   }
+  .main-youtube {
+    padding: 0px 16px;
+  }
+  .main_youtube_titles {
+    gap: 12px;
+    margin-top: 50px;
+  }
+  .main_youtube_titles h1 {
+    font-size: 30px;
+    width: 100%;
+  }
+  .main-youtube p {
+    margin-top: 24px;
+  }
+  iframe {
+    width: 100%;
+    height: 153px;
+    margin-top: 32px;
+  }
+  .youtube_icon {
+    margin-top: 32px;
+  }
+  .main_logopitizm_fa {
+    margin-top: 32px;
+    padding: 16px;
+  }
+  .main_logotipizm_img {
+    width: 100%;
+    max-width: 88px;
+  }
+  .main_logopitizim_text p {
+    font-size: 16px;
+  }
+  .logotipizm {
+    width: 100%;
+    max-width: 18px;
+  }
+  .main-teachers {
+    display: none;
+  }
+  .mian-techers-mini {
+    display: block;
+    overflow: hidden;
+  }
+  .techers_cards_mini {
+    display: flex;
+    margin-top: 32px;
+    gap: 16px;
+    flex-wrap: nowrap;
+    width: max-content;
+    animation: scroll-left 25s linear infinite;
+  }
+  .teacher_card_mini img {
+    border-radius: 24px;
+  }
+  .teacher_card_mini p {
+    font-weight: 600;
+    font-size: 18px;
+    color: #020202;
+    margin-top: 12px;
+  }
+  @keyframes scroll-left {
+    from {
+      transform: translateX(0);
+    }
+    to {
+      transform: translateX(-50%);
+    }
+  }
+  .main_title_yoshlar {
+    margin-top: 50px;
+  }
+  .main_title_yoshlar h1 {
+    font-size: 30px;
+    width: 100%;
+  }
+  .main_title_yoshlar p {
+    font-size: 12px;
+    margin-top: 20px;
+  }
+  .main_end_texts {
+    margin-top: 20px;
+    margin-bottom: 60px;
+    padding: 16px;
+  }
+  .end_text {
+    font-size: 16px;
+  }
+  .ariza_end {
+    width: 100%;
+    max-width: 200px;
+    font-size: 16px;
+    margin-top: 24px;
+    border-radius: 16px;
+  }
 
   /* //////////////  footer */
 
@@ -882,8 +1104,9 @@ footer {
   }
   .footer_map iframe {
     width: 100%;
-    /* max-width: 398px; */
+    max-width: 398px;
     height: 344px;
+    margin: 0px;
   }
   .footer-icons {
     padding: 32px 0px;
