--- a/style/index.css
+++ b/style/index.css
@@ -28,9 +28,9 @@ h5,
 h6 {
   margin: 0;
 }
-ul li {
+/* ul li {
   list-style: none;
-}
+} */
 a {
   text-decoration: none;
 }
@@ -50,9 +50,10 @@ a {
   border-radius: 24px 0px;
   justify-content: space-between;
 }
-ul {
+.nav_navbar {
   display: flex;
   gap: 30px;
+  list-style: none;
   align-items: center;
 }
 ul li a {
@@ -127,7 +128,8 @@ select {
 .cards {
   display: flex;
   gap: 28px;
-  padding: 135px 0px;
+  margin-top: 135px;
+  margin-bottom: 135px;
 }
 .card {
   width: 100%;
@@ -143,7 +145,8 @@ select {
   color: #020202;
   padding-top: 16px;
 }
-.feedbek {
+
+.feedbek_bag {
   width: 100%;
   padding: 48px;
   border-radius: 32px;
@@ -207,7 +210,7 @@ select {
 }
 
 .main_texts {
-  padding: 0px;
+  /* padding: 0px; */
   display: flex;
   gap: 24px;
   margin-top: 80px;
@@ -224,14 +227,14 @@ select {
   font-weight: 600;
   font-size: 40px;
 }
-.partnior {
-  padding: 0px;
-}
 .partnior-cards {
   display: flex;
   justify-content: space-between;
+  margin-top: 40px;
+  margin-bottom: 80px;
+
   /* gap: 24px;  */
-  padding: 40px 0px 80px 0px;
+  /* padding: 40px 80px ; */
 }
 .partnior_card {
   width: 100%;
@@ -261,9 +264,7 @@ select {
   font-weight: 600;
   font-size: 20px;
 }
-.main-ideas {
-  padding: 0px;
-}
+
 .main_ideas_text {
   margin-top: 24px;
   display: flex;
@@ -696,7 +697,7 @@ footer {
 .footer-cards {
   display: flex;
   justify-content: space-between;
-  padding: 0px;
+  /* padding: 0px; */
 }
 .footer_logo_btn {
   display: flex;
@@ -711,6 +712,7 @@ footer {
   font-weight: 600;
   font-size: 16px;
   border-radius: 8px;
+  border: none;
   padding: 8px 14px;
 }
 .footer_informeshion {
@@ -763,7 +765,6 @@ footer {
 .footer-end {
   margin-top: 32px;
   display: flex;
-  padding: 0px;
   justify-content: space-between;
   color: white;
   font-weight: 500;
@@ -784,14 +785,80 @@ footer {
 .main-directions-mini {
   display: none;
 }
+.logo {
+  display: flex;
+  display: none;
+  align-items: center;
+  gap: 8px;
+  font-weight: bold;
+  font-size: 18px;
+}
+.close-btn {
+  display: none;
+}
+.logo img {
+  height: 24px;
+}
+.nav-menu {
+}
+.nav-menu li a {
+  text-decoration: none;
+  color: #333;
+  font-weight: 500;
+}
+.phone_logo {
+  display: none;
+}
 
 /* ///////////////////   RESPOMSIVE */
 
 @media screen and (max-width: 500px) {
+  .nav_navbar {
+    margin-top: 50px;
+    flex-direction: column;
+    align-items: start;
+  }
   .hamburger-btn {
     display: block;
     margin: 0;
     padding-top: 3px;
+  }
+  .nav-menu {
+    display: none;
+  }
+  .close-btn {
+    display: block;
+  }
+  .logo {
+    display: block;
+  }
+  .nav-menu.open {
+    display: flex;
+    flex-direction: column;
+    position: fixed;
+    inset: 0;
+    background: #fff;
+    padding: 24px;
+    /* z-index: 1000; */
+    /* gap: 24px; */
+  }
+  .phone_logo {
+    width: 100% !important;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 200px;
+  }
+
+  .nav-menu .menu-header .close-btn {
+    background: none;
+    border: none;
+    padding: 4px;
+    cursor: pointer;
+  }
+  .nav-menu li a {
+    font-size: 18px;
+    color: #333;
   }
   ul {
     display: none;
@@ -834,7 +901,7 @@ footer {
     padding: 0px;
     font-size: 20px;
   }
-  .feedbek {
+  .feedbek_bag {
     width: 100%;
     padding: 16px;
   }
@@ -863,7 +930,7 @@ footer {
     font-size: 20px;
   }
   .main_texts {
-    padding: 0px 16px;
+    /* padding: 0px 16px; */
     margin-top: 60px;
   }
   .main_texts h1 {
@@ -891,7 +958,10 @@ footer {
     gap: 16px;
   }
   .slider {
-    animation: scroll 20s linear infinite;
+    animation: scroll 15s linear infinite;
+  }
+  .slider.reverse {
+    animation-direction: reverse;
   }
   .mini_img {
     width: 100%;
@@ -992,7 +1062,7 @@ footer {
     margin-top: 24px;
   }
   .main-youtube {
-    padding: 0px 16px;
+    /* padding: 0px 16px; */
   }
   .main_youtube_titles {
     gap: 12px;
@@ -1005,7 +1075,7 @@ footer {
   .main-youtube p {
     margin-top: 24px;
   }
-  iframe {
+  .youtube {
     width: 100%;
     height: 153px;
     margin-top: 32px;
@@ -1102,11 +1172,12 @@ footer {
     flex-direction: column;
     width: 100%;
   }
+  .footer_map {
+    padding: 0px;
+  }
   .footer_map iframe {
     width: 100%;
-    max-width: 398px;
     height: 344px;
-    margin: 0px;
   }
   .footer-icons {
     padding: 32px 0px;
