--- a/style/index.css
+++ b/style/index.css
@@ -53,12 +53,14 @@ a {
 .nav_navbar {
   display: flex;
   gap: 30px;
+  padding-top: 5px;
   list-style: none;
   align-items: center;
+  text-align: center;
 }
 ul li a {
-  display: inline-block;
-  padding: 3px 10px;
+  display: flex;
+  padding: 3px 5px;
   border-radius: 8px;
   font-weight: 500;
   font-size: 16px;
