--- a/style/index.css
+++ b/style/index.css
@@ -883,7 +883,9 @@ footer {
     max-width: 38px;
   }
   .cards {
-    padding: 0px 0px 50px 0px;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    /* padding: 0px 0px 50px 0px; */
     flex-direction: column;
     align-items: center;
   }
