--- a/style/event.css
+++ b/style/event.css
@@ -51,7 +51,7 @@
   box-shadow: 0px 3px 6px 0px #51709a1a;
 }
 .tadbirlar_img {
-  position: relative;
+  /* position: relative; */
   width: 100%;
   height: 230px;
 }
@@ -64,7 +64,7 @@
   border-radius: 16px;
 }
 .yaqinda_btn {
-  position: absolute;
+  /* position: absolute; */
   top: 16px;
   left: 16px;
   display: inline-block;
@@ -162,9 +162,9 @@
   .tadbirlar_text h1 {
     font-size: 30px;
   }
-  .cards_tadbirlar {
+  /* .cards_tadbirlar {
     position: relative;
-  }
+  } */
   .cards_slider {
     display: flex;
     flex-wrap: nowrap;
