--- a/style/index.css
+++ b/style/index.css
@@ -56,7 +56,9 @@ a {
   padding-top: 5px;
   list-style: none;
   align-items: center;
+  background-color: white;
   text-align: center;
+  
 }
 ul li a {
   display: flex;
