--- a/style/event.css
+++ b/style/event.css
@@ -51,9 +51,10 @@
   box-shadow: 0px 3px 6px 0px #51709a1a;
 }
 .tadbirlar_img {
-  /* position: relative; */
+  position: relative;
   width: 100%;
   height: 230px;
+
 }
 
 .tadbirlar_img img {
@@ -64,7 +65,7 @@
   border-radius: 16px;
 }
 .yaqinda_btn {
-  /* position: absolute; */
+  position: absolute;
   top: 16px;
   left: 16px;
   display: inline-block;
