--- a/style/event.css
+++ b/style/event.css
@@ -13,7 +13,7 @@
   font-size: 40px;
   color: black;
 }
-.tadbirlar_text2 hr {
+.tadbirlar_text2 span {
   width: 2px;
   background-color: #f28e46;
   border: none;
@@ -23,7 +23,7 @@
   font-size: 40px;
   color: black;
 }
-.tadbirlar_text hr {
+.tadbirlar_text span {
   width: 2px;
   background-color: #f28e46;
   border: none;
@@ -54,7 +54,6 @@
   position: relative;
   width: 100%;
   height: 230px;
-
 }
 
 .tadbirlar_img img {
@@ -146,13 +145,37 @@
 .main-startup {
   margin-bottom: 80px;
 }
+.looooop {
+  display: flex;
+  justify-content: center;
+  gap: 16px;
+  margin-top: 32px;
+}
+
+.burush_btn {
+  display: block;
+  bottom: 12px;
+  width: 48px;
+  height: 48px;
+  border: none;
+  border-radius: 50%;
+  background-color: #f28e46;
+  color: #fff;
+  font-size: 20px;
+  line-height: 1;
+  cursor: pointer;
+  border: none;
+}
 @media (max-width: 500px) {
+  .burush_btn {
+    display: none;
+  }
   .tadbirlar_text hr {
     margin: 0px;
     height: auto;
     width: 2px;
   }
-  .tadbirlar_text2 hr {
+  .tadbirlar_text2 span {
     margin: 0px;
     height: auto;
     width: 2px;
