--- a/style/index.css
+++ b/style/index.css
@@ -50,6 +50,15 @@ a {
   border-radius: 24px 0px;
   justify-content: space-between;
 }
+.navbar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 1000;
+  background-color: white;
+  /* box-shadow: 0px 1px 3px 0px #535862; */
+}
 .nav_navbar {
   display: flex;
   gap: 30px;
@@ -58,7 +67,6 @@ a {
   align-items: center;
   background-color: white;
   text-align: center;
-  
 }
 ul li a {
   display: flex;
@@ -154,7 +162,10 @@ select {
   width: 100%;
   padding: 48px;
   border-radius: 32px;
-  background: #f5a838 url("../img/feedbek_bagc.svg") center center;
+
+  background: url("../img/feedbek_bagc.svg") center center,
+    linear-gradient(to right, #f9b513, #ea601e);
+
   background-size: contain;
 }
 .feedbek_cards {
@@ -219,7 +230,7 @@ select {
   gap: 24px;
   margin-top: 80px;
 }
-.main_texts hr {
+.main_texts span {
   width: 100%;
   max-width: 2px;
   border: none;
@@ -236,7 +247,6 @@ select {
   justify-content: space-between;
   margin-top: 40px;
   margin-bottom: 80px;
-
   /* gap: 24px;  */
   /* padding: 40px 80px ; */
 }
@@ -281,7 +291,7 @@ select {
   font-size: 40px;
   color: #020202;
 }
-.main_ideas_text hr {
+.main_ideas_text span {
   width: 100%;
   max-width: 2px;
   border: none;
@@ -469,10 +479,11 @@ select {
   display: flex;
   gap: 24px;
   border-radius: 32px;
-  background: #f5a838 url("../img/feedbek_bagc.svg") center center;
+  background: url("../img/feedbek_bagc.svg") center center,
+    linear-gradient(to right, #f9b513, #ea601e);
   background-size: contain;
 }
-.main_text_content hr {
+.main_text_content span {
   width: 100%;
   max-width: 2px;
   color: white;
@@ -490,17 +501,18 @@ select {
   font-size: 24px;
   color: white;
 }
+
 .main-partners {
-  overflow: hidden;
   display: flex;
   flex-direction: column;
   gap: 32px;
   margin-top: 80px;
 }
-.partners_top,
-.partners_bottom {
+
+.slider-wrap {
   overflow: hidden;
 }
+
 .slider {
   display: flex;
   gap: 18px;
@@ -511,13 +523,14 @@ select {
 }
 
 @keyframes scroll {
-  from {
+  0% {
     transform: translateX(0);
   }
-  to {
+  100% {
     transform: translateX(-50%);
   }
 }
+
 .parfolio_btn {
   width: auto;
   display: flex;
@@ -529,7 +542,7 @@ select {
   border-radius: 24px;
   padding: 6px 6px 6px 32px;
   margin-top: 40px;
-  background-color: #f28e46;
+  background: linear-gradient(to right, #f9b513, #ea601e);
 }
 .main_youtube_titles {
   width: 100%;
@@ -546,7 +559,7 @@ select {
   font-size: 24px;
   color: #020202;
 }
-.main_youtube_titles hr {
+.main_youtube_titles span {
   width: 100%;
   max-width: 2px;
   border: none;
@@ -571,7 +584,8 @@ select {
 .main_logopitizm_fa {
   width: 100%;
   margin-top: 80px;
-  background: #f5a838 url("../img/feedbek_bagc.svg") center center;
+  background: url("../img/feedbek_bagc.svg") center center,
+    linear-gradient(to right, #f9b513, #ea601e);
   background-size: contain;
   display: flex;
   align-items: center;
@@ -590,7 +604,7 @@ select {
   font-size: 32px;
   color: white;
 }
-.main_logopitizim_text hr {
+.main_logopitizim_text span {
   width: 2px;
   border: none;
   color: white;
@@ -627,7 +641,7 @@ select {
   margin-top: 80px;
   gap: 24px;
 }
-.main_title_yoshlar hr {
+.yoshlar_hr {
   width: 2px;
   border: none;
   background-color: #f28e46;
@@ -654,7 +668,8 @@ select {
 .main_end_texts {
   width: 100%;
   margin-top: 80px;
-  background: #f5a838 url("../img/feedbek_bagc.svg") center center;
+  background: url("../img/feedbek_bagc.svg") center center,
+    linear-gradient(to right, #f9b513, #ea601e);
   background-size: contain;
   align-items: center;
   gap: 24px;
@@ -943,7 +958,7 @@ footer {
     font-size: 30px;
   }
   .partnior-cards {
-    padding: 50px 16px;
+    padding: 50px 0px;
     gap: 24px;
     flex-direction: column;
   }
@@ -1014,7 +1029,7 @@ footer {
     font-size: 40px;
     color: #f28e46;
   }
-  .text_mini hr {
+  .text_mini span {
     width: 2px;
     height: 48px;
     border: none;
@@ -1163,29 +1178,27 @@ footer {
     border-radius: 16px;
   }
 
+  /* hamburger */
+  .nav-menu {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background: white;
+    overflow-y: auto;
+    transform: translateX(-100%);
+    transition: transform 0.3s ease;
+    z-index: 1000;
+  }
 
-/* hamburger */
-.nav-menu {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100vh;     
-  background: white; 
-  overflow-y: auto;   
-  transform: translateX(-100%); 
-  transition: transform 0.3s ease;
-  z-index: 1000;
-}
+  .nav-menu.open {
+    transform: translateX(0);
+  }
 
-.nav-menu.open {
-  transform: translateX(0);
-}
-
-body.menu-open {
-  overflow: hidden;
-}
-
+  body.menu-open {
+    overflow: hidden;
+  }
 
   /* //////////////  footer */
 
@@ -1221,6 +1234,6 @@ body.menu-open {
     margin-top: 32px 0px;
   }
   footer {
-    padding: 32px 16px;
+    padding: 32px 0px;
   }
 }
